TPI - GRUPO SPACEX/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR

Grammar

Rule 0     S' -> sigma
Rule 1     sigma -> APERT_LISTA empresas COMA version COMA firmaDigital CIERRE_LISTA
Rule 2     sigma -> APERT_LISTA empresas COMA firmaDigital COMA version CIERRE_LISTA
Rule 3     sigma -> APERT_LISTA version COMA firmaDigital COMA empresas CIERRE_LISTA
Rule 4     sigma -> APERT_LISTA firmaDigital COMA version COMA empresas CIERRE_LISTA
Rule 5     sigma -> APERT_LISTA firmaDigital COMA empresas COMA version CIERRE_LISTA
Rule 6     sigma -> APERT_LISTA empresas COMA version CIERRE_LISTA
Rule 7     sigma -> APERT_LISTA empresas COMA firmaDigital CIERRE_LISTA
Rule 8     sigma -> APERT_LISTA version COMA empresas CIERRE_LISTA
Rule 9     sigma -> APERT_LISTA firmaDigital COMA empresas CIERRE_LISTA
Rule 10    sigma -> APERT_LISTA empresas CIERRE_LISTA
Rule 11    version -> VERSION TEXTO
Rule 12    version -> VERSION VACIO
Rule 13    firmaDigital -> FIRMA_DIGITAL TEXTO
Rule 14    firmaDigital -> FIRMA_DIGITAL VACIO
Rule 15    empresas -> EMPRESAS APERT_BLOQUE lista_empresas CIERRE_BLOQUE
Rule 16    lista_empresas -> APERT_LISTA objeto_empresa CIERRE_LISTA
Rule 17    lista_empresas -> APERT_LISTA objeto_empresa CIERRE_LISTA COMA lista_empresas
Rule 18    objeto_empresa -> nombre_empresa COMA fundacion COMA direccion COMA ingresos_anuales COMA pyme COMA link COMA departamentos
Rule 19    objeto_empresa -> nombre_empresa COMA fundacion COMA ingresos_anuales COMA pyme COMA link COMA departamentos
Rule 20    objeto_empresa -> nombre_empresa COMA fundacion COMA direccion COMA ingresos_anuales COMA pyme COMA departamentos
Rule 21    objeto_empresa -> nombre_empresa COMA fundacion COMA ingresos_anuales COMA pyme COMA departamentos
Rule 22    nombre_empresa -> NOMBRE_EMPRESA TEXTO
Rule 23    fundacion -> FUNDACION FECHA
Rule 24    pyme -> PYME BOOLEANO
Rule 25    ingresos_anuales -> INGRESOS_ANUALES FLOTANTE
Rule 26    link -> LINK URL
Rule 27    link -> LINK VACIO
Rule 28    direccion -> DIRECCION APERT_LISTA objeto_direccion CIERRE_LISTA
Rule 29    direccion -> DIRECCION VACIO
Rule 30    objeto_direccion -> calle COMA ciudad COMA pais
Rule 31    objeto_direccion -> calle COMA pais COMA ciudad
Rule 32    objeto_direccion -> ciudad COMA pais COMA calle
Rule 33    objeto_direccion -> ciudad COMA calle COMA pais
Rule 34    objeto_direccion -> pais COMA ciudad COMA calle
Rule 35    objeto_direccion -> pais COMA calle COMA ciudad
Rule 36    calle -> CALLE TEXTO
Rule 37    ciudad -> CIUDAD TEXTO
Rule 38    pais -> PAIS TEXTO
Rule 39    departamentos -> DEPARTAMENTOS APERT_BLOQUE lista_dpto CIERRE_BLOQUE
Rule 40    lista_dpto -> APERT_LISTA objeto_dpto CIERRE_LISTA
Rule 41    lista_dpto -> APERT_LISTA objeto_dpto CIERRE_LISTA COMA lista_dpto
Rule 42    objeto_dpto -> nombre COMA jefe COMA sub_dptos
Rule 43    objeto_dpto -> nombre COMA sub_dptos COMA jefe
Rule 44    objeto_dpto -> jefe COMA sub_dptos COMA nombre
Rule 45    objeto_dpto -> jefe COMA nombre COMA sub_dptos
Rule 46    objeto_dpto -> sub_dptos COMA nombre COMA jefe
Rule 47    objeto_dpto -> sub_dptos COMA jefe COMA nombre
Rule 48    objeto_dpto -> nombre COMA sub_dptos
Rule 49    objeto_dpto -> sub_dptos COMA nombre
Rule 50    sub_dptos -> SUBDEPARTAMENTOS APERT_BLOQUE lista_sub_dpto CIERRE_BLOQUE
Rule 51    lista_sub_dpto -> APERT_LISTA objeto_sub_dpto CIERRE_LISTA
Rule 52    lista_sub_dpto -> APERT_LISTA objeto_sub_dpto CIERRE_LISTA COMA lista_sub_dpto
Rule 53    objeto_sub_dpto -> nombre COMA jefe COMA empleados
Rule 54    objeto_sub_dpto -> nombre COMA jefe
Rule 55    objeto_sub_dpto -> nombre COMA empleados
Rule 56    objeto_sub_dpto -> nombre
Rule 57    objeto_sub_dpto -> jefe COMA nombre COMA empleados
Rule 58    objeto_sub_dpto -> jefe COMA empleados COMA nombre
Rule 59    objeto_sub_dpto -> empleados COMA jefe COMA nombre
Rule 60    objeto_sub_dpto -> empleados COMA nombre COMA jefe
Rule 61    objeto_sub_dpto -> jefe COMA nombre
Rule 62    objeto_sub_dpto -> empleados COMA nombre
Rule 63    empleados -> EMPLEADOS APERT_BLOQUE lista_empleados CIERRE_BLOQUE
Rule 64    empleados -> EMPLEADOS VACIO
Rule 65    lista_empleados -> APERT_LISTA objeto_empleados CIERRE_LISTA
Rule 66    lista_empleados -> APERT_LISTA objeto_empleados CIERRE_LISTA COMA lista_empleados
Rule 67    objeto_empleados -> nombre COMA edad COMA cargo COMA salario COMA activo COMA fecha_contratacion COMA proyectos
Rule 68    objeto_empleados -> nombre COMA edad COMA cargo COMA salario COMA activo COMA fecha_contratacion
Rule 69    objeto_empleados -> nombre COMA cargo COMA salario COMA activo COMA fecha_contratacion COMA proyectos
Rule 70    objeto_empleados -> nombre COMA cargo COMA salario COMA activo COMA fecha_contratacion
Rule 71    proyectos -> PROYECTOS APERT_BLOQUE lista_proyectos CIERRE_BLOQUE
Rule 72    proyectos -> PROYECTOS VACIO
Rule 73    lista_proyectos -> APERT_LISTA objeto_proyecto CIERRE_LISTA
Rule 74    lista_proyectos -> APERT_LISTA objeto_proyecto CIERRE_LISTA COMA lista_proyectos
Rule 75    objeto_proyecto -> nombre COMA estado COMA fecha_inicio COMA fecha_fin
Rule 76    objeto_proyecto -> nombre COMA fecha_inicio COMA fecha_fin
Rule 77    objeto_proyecto -> nombre COMA estado COMA fecha_inicio
Rule 78    objeto_proyecto -> nombre COMA fecha_inicio
Rule 79    nombre -> NOMBRE TEXTO
Rule 80    jefe -> JEFE TEXTO
Rule 81    jefe -> JEFE VACIO
Rule 82    edad -> EDAD NUMERO
Rule 83    edad -> EDAD VACIO
Rule 84    cargo -> CARGO TEXTO_RESTRINGIDO_CARGO
Rule 85    salario -> SALARIO FLOTANTE
Rule 86    activo -> ACTIVO BOOLEANO
Rule 87    fecha_contratacion -> FECHA_CONTRATACION FECHA
Rule 88    estado -> ESTADO TEXTO_RESTRINGIDO_ESTADO
Rule 89    estado -> ESTADO VACIO
Rule 90    fecha_inicio -> FECHA_INICIO FECHA
Rule 91    fecha_fin -> FECHA_FIN FECHA
Rule 92    fecha_fin -> FECHA_FIN VACIO

Terminals, with rules where they appear

ACTIVO               : 86
APERT_BLOQUE         : 15 39 50 63 71
APERT_LISTA          : 1 2 3 4 5 6 7 8 9 10 16 17 28 40 41 51 52 65 66 73 74
BOOLEANO             : 24 86
CALLE                : 36
CARGO                : 84
CIERRE_BLOQUE        : 15 39 50 63 71
CIERRE_LISTA         : 1 2 3 4 5 6 7 8 9 10 16 17 28 40 41 51 52 65 66 73 74
CIUDAD               : 37
COMA                 : 1 1 2 2 3 3 4 4 5 5 6 7 8 9 17 18 18 18 18 18 18 19 19 19 19 19 20 20 20 20 20 21 21 21 21 30 30 31 31 32 32 33 33 34 34 35 35 41 42 42 43 43 44 44 45 45 46 46 47 47 48 49 52 53 53 54 55 57 57 58 58 59 59 60 60 61 62 66 67 67 67 67 67 67 68 68 68 68 68 69 69 69 69 69 70 70 70 70 74 75 75 75 76 76 77 77 78
DEPARTAMENTOS        : 39
DIRECCION            : 28 29
EDAD                 : 82 83
EMPLEADOS            : 63 64
EMPRESAS             : 15
ERROR                : 
ESTADO               : 88 89
FECHA                : 23 87 90 91
FECHA_CONTRATACION   : 87
FECHA_FIN            : 91 92
FECHA_INICIO         : 90
FIRMA_DIGITAL        : 13 14
FLOTANTE             : 25 85
FUNDACION            : 23
INGRESOS_ANUALES     : 25
JEFE                 : 80 81
LINK                 : 26 27
NOMBRE               : 79
NOMBRE_EMPRESA       : 22
NUMERO               : 82
PAIS                 : 38
PROYECTOS            : 71 72
PYME                 : 24
SALARIO              : 85
SUBDEPARTAMENTOS     : 50
TEXTO                : 11 13 22 36 37 38 79 80
TEXTO_RESTRINGIDO_CARGO : 84
TEXTO_RESTRINGIDO_ESTADO : 88
URL                  : 26
VACIO                : 12 14 27 29 64 72 81 83 89 92
VERSION              : 11 12
error                : 

Nonterminals, with rules where they appear

activo               : 67 68 69 70
calle                : 30 31 32 33 34 35
cargo                : 67 68 69 70
ciudad               : 30 31 32 33 34 35
departamentos        : 18 19 20 21
direccion            : 18 20
edad                 : 67 68
empleados            : 53 55 57 58 59 60 62
empresas             : 1 2 3 4 5 6 7 8 9 10
estado               : 75 77
fecha_contratacion   : 67 68 69 70
fecha_fin            : 75 76
fecha_inicio         : 75 76 77 78
firmaDigital         : 1 2 3 4 5 7 9
fundacion            : 18 19 20 21
ingresos_anuales     : 18 19 20 21
jefe                 : 42 43 44 45 46 47 53 54 57 58 59 60 61
link                 : 18 19
lista_dpto           : 39 41
lista_empleados      : 63 66
lista_empresas       : 15 17
lista_proyectos      : 71 74
lista_sub_dpto       : 50 52
nombre               : 42 43 44 45 46 47 48 49 53 54 55 56 57 58 59 60 61 62 67 68 69 70 75 76 77 78
nombre_empresa       : 18 19 20 21
objeto_direccion     : 28
objeto_dpto          : 40 41
objeto_empleados     : 65 66
objeto_empresa       : 16 17
objeto_proyecto      : 73 74
objeto_sub_dpto      : 51 52
pais                 : 30 31 32 33 34 35
proyectos            : 67 69
pyme                 : 18 19 20 21
salario              : 67 68 69 70
sigma                : 0
sub_dptos            : 42 43 44 45 46 47 48 49
version              : 1 2 3 4 5 6 8

Parsing method: LALR

state 0

    (0) S' -> . sigma
    (1) sigma -> . APERT_LISTA empresas COMA version COMA firmaDigital CIERRE_LISTA
    (2) sigma -> . APERT_LISTA empresas COMA firmaDigital COMA version CIERRE_LISTA
    (3) sigma -> . APERT_LISTA version COMA firmaDigital COMA empresas CIERRE_LISTA
    (4) sigma -> . APERT_LISTA firmaDigital COMA version COMA empresas CIERRE_LISTA
    (5) sigma -> . APERT_LISTA firmaDigital COMA empresas COMA version CIERRE_LISTA
    (6) sigma -> . APERT_LISTA empresas COMA version CIERRE_LISTA
    (7) sigma -> . APERT_LISTA empresas COMA firmaDigital CIERRE_LISTA
    (8) sigma -> . APERT_LISTA version COMA empresas CIERRE_LISTA
    (9) sigma -> . APERT_LISTA firmaDigital COMA empresas CIERRE_LISTA
    (10) sigma -> . APERT_LISTA empresas CIERRE_LISTA

    APERT_LISTA     shift and go to state 2

    sigma                          shift and go to state 1

state 1

    (0) S' -> sigma .



state 2

    (1) sigma -> APERT_LISTA . empresas COMA version COMA firmaDigital CIERRE_LISTA
    (2) sigma -> APERT_LISTA . empresas COMA firmaDigital COMA version CIERRE_LISTA
    (3) sigma -> APERT_LISTA . version COMA firmaDigital COMA empresas CIERRE_LISTA
    (4) sigma -> APERT_LISTA . firmaDigital COMA version COMA empresas CIERRE_LISTA
    (5) sigma -> APERT_LISTA . firmaDigital COMA empresas COMA version CIERRE_LISTA
    (6) sigma -> APERT_LISTA . empresas COMA version CIERRE_LISTA
    (7) sigma -> APERT_LISTA . empresas COMA firmaDigital CIERRE_LISTA
    (8) sigma -> APERT_LISTA . version COMA empresas CIERRE_LISTA
    (9) sigma -> APERT_LISTA . firmaDigital COMA empresas CIERRE_LISTA
    (10) sigma -> APERT_LISTA . empresas CIERRE_LISTA
    (15) empresas -> . EMPRESAS APERT_BLOQUE lista_empresas CIERRE_BLOQUE
    (11) version -> . VERSION TEXTO
    (12) version -> . VERSION VACIO
    (13) firmaDigital -> . FIRMA_DIGITAL TEXTO
    (14) firmaDigital -> . FIRMA_DIGITAL VACIO

    EMPRESAS        shift and go to state 6
    VERSION         shift and go to state 7
    FIRMA_DIGITAL   shift and go to state 8

    empresas                       shift and go to state 3
    version                        shift and go to state 4
    firmaDigital                   shift and go to state 5

state 3

    (1) sigma -> APERT_LISTA empresas . COMA version COMA firmaDigital CIERRE_LISTA
    (2) sigma -> APERT_LISTA empresas . COMA firmaDigital COMA version CIERRE_LISTA
    (6) sigma -> APERT_LISTA empresas . COMA version CIERRE_LISTA
    (7) sigma -> APERT_LISTA empresas . COMA firmaDigital CIERRE_LISTA
    (10) sigma -> APERT_LISTA empresas . CIERRE_LISTA

    COMA            shift and go to state 9
    CIERRE_LISTA    shift and go to state 10


state 4

    (3) sigma -> APERT_LISTA version . COMA firmaDigital COMA empresas CIERRE_LISTA
    (8) sigma -> APERT_LISTA version . COMA empresas CIERRE_LISTA

    COMA            shift and go to state 11


state 5

    (4) sigma -> APERT_LISTA firmaDigital . COMA version COMA empresas CIERRE_LISTA
    (5) sigma -> APERT_LISTA firmaDigital . COMA empresas COMA version CIERRE_LISTA
    (9) sigma -> APERT_LISTA firmaDigital . COMA empresas CIERRE_LISTA

    COMA            shift and go to state 12


state 6

    (15) empresas -> EMPRESAS . APERT_BLOQUE lista_empresas CIERRE_BLOQUE

    APERT_BLOQUE    shift and go to state 13


state 7

    (11) version -> VERSION . TEXTO
    (12) version -> VERSION . VACIO

    TEXTO           shift and go to state 14
    VACIO           shift and go to state 15


state 8

    (13) firmaDigital -> FIRMA_DIGITAL . TEXTO
    (14) firmaDigital -> FIRMA_DIGITAL . VACIO

    TEXTO           shift and go to state 16
    VACIO           shift and go to state 17


state 9

    (1) sigma -> APERT_LISTA empresas COMA . version COMA firmaDigital CIERRE_LISTA
    (2) sigma -> APERT_LISTA empresas COMA . firmaDigital COMA version CIERRE_LISTA
    (6) sigma -> APERT_LISTA empresas COMA . version CIERRE_LISTA
    (7) sigma -> APERT_LISTA empresas COMA . firmaDigital CIERRE_LISTA
    (11) version -> . VERSION TEXTO
    (12) version -> . VERSION VACIO
    (13) firmaDigital -> . FIRMA_DIGITAL TEXTO
    (14) firmaDigital -> . FIRMA_DIGITAL VACIO

    VERSION         shift and go to state 7
    FIRMA_DIGITAL   shift and go to state 8

    version                        shift and go to state 18
    firmaDigital                   shift and go to state 19

state 10

    (10) sigma -> APERT_LISTA empresas CIERRE_LISTA .

    $end            reduce using rule 10 (sigma -> APERT_LISTA empresas CIERRE_LISTA .)


state 11

    (3) sigma -> APERT_LISTA version COMA . firmaDigital COMA empresas CIERRE_LISTA
    (8) sigma -> APERT_LISTA version COMA . empresas CIERRE_LISTA
    (13) firmaDigital -> . FIRMA_DIGITAL TEXTO
    (14) firmaDigital -> . FIRMA_DIGITAL VACIO
    (15) empresas -> . EMPRESAS APERT_BLOQUE lista_empresas CIERRE_BLOQUE

    FIRMA_DIGITAL   shift and go to state 8
    EMPRESAS        shift and go to state 6

    firmaDigital                   shift and go to state 20
    empresas                       shift and go to state 21

state 12

    (4) sigma -> APERT_LISTA firmaDigital COMA . version COMA empresas CIERRE_LISTA
    (5) sigma -> APERT_LISTA firmaDigital COMA . empresas COMA version CIERRE_LISTA
    (9) sigma -> APERT_LISTA firmaDigital COMA . empresas CIERRE_LISTA
    (11) version -> . VERSION TEXTO
    (12) version -> . VERSION VACIO
    (15) empresas -> . EMPRESAS APERT_BLOQUE lista_empresas CIERRE_BLOQUE

    VERSION         shift and go to state 7
    EMPRESAS        shift and go to state 6

    version                        shift and go to state 22
    empresas                       shift and go to state 23

state 13

    (15) empresas -> EMPRESAS APERT_BLOQUE . lista_empresas CIERRE_BLOQUE
    (16) lista_empresas -> . APERT_LISTA objeto_empresa CIERRE_LISTA
    (17) lista_empresas -> . APERT_LISTA objeto_empresa CIERRE_LISTA COMA lista_empresas

    APERT_LISTA     shift and go to state 25

    lista_empresas                 shift and go to state 24

state 14

    (11) version -> VERSION TEXTO .

    COMA            reduce using rule 11 (version -> VERSION TEXTO .)
    CIERRE_LISTA    reduce using rule 11 (version -> VERSION TEXTO .)


state 15

    (12) version -> VERSION VACIO .

    COMA            reduce using rule 12 (version -> VERSION VACIO .)
    CIERRE_LISTA    reduce using rule 12 (version -> VERSION VACIO .)


state 16

    (13) firmaDigital -> FIRMA_DIGITAL TEXTO .

    COMA            reduce using rule 13 (firmaDigital -> FIRMA_DIGITAL TEXTO .)
    CIERRE_LISTA    reduce using rule 13 (firmaDigital -> FIRMA_DIGITAL TEXTO .)


state 17

    (14) firmaDigital -> FIRMA_DIGITAL VACIO .

    COMA            reduce using rule 14 (firmaDigital -> FIRMA_DIGITAL VACIO .)
    CIERRE_LISTA    reduce using rule 14 (firmaDigital -> FIRMA_DIGITAL VACIO .)


state 18

    (1) sigma -> APERT_LISTA empresas COMA version . COMA firmaDigital CIERRE_LISTA
    (6) sigma -> APERT_LISTA empresas COMA version . CIERRE_LISTA

    COMA            shift and go to state 26
    CIERRE_LISTA    shift and go to state 27


state 19

    (2) sigma -> APERT_LISTA empresas COMA firmaDigital . COMA version CIERRE_LISTA
    (7) sigma -> APERT_LISTA empresas COMA firmaDigital . CIERRE_LISTA

    COMA            shift and go to state 28
    CIERRE_LISTA    shift and go to state 29


state 20

    (3) sigma -> APERT_LISTA version COMA firmaDigital . COMA empresas CIERRE_LISTA

    COMA            shift and go to state 30


state 21

    (8) sigma -> APERT_LISTA version COMA empresas . CIERRE_LISTA

    CIERRE_LISTA    shift and go to state 31


state 22

    (4) sigma -> APERT_LISTA firmaDigital COMA version . COMA empresas CIERRE_LISTA

    COMA            shift and go to state 32


state 23

    (5) sigma -> APERT_LISTA firmaDigital COMA empresas . COMA version CIERRE_LISTA
    (9) sigma -> APERT_LISTA firmaDigital COMA empresas . CIERRE_LISTA

    COMA            shift and go to state 33
    CIERRE_LISTA    shift and go to state 34


state 24

    (15) empresas -> EMPRESAS APERT_BLOQUE lista_empresas . CIERRE_BLOQUE

    CIERRE_BLOQUE   shift and go to state 35


state 25

    (16) lista_empresas -> APERT_LISTA . objeto_empresa CIERRE_LISTA
    (17) lista_empresas -> APERT_LISTA . objeto_empresa CIERRE_LISTA COMA lista_empresas
    (18) objeto_empresa -> . nombre_empresa COMA fundacion COMA direccion COMA ingresos_anuales COMA pyme COMA link COMA departamentos
    (19) objeto_empresa -> . nombre_empresa COMA fundacion COMA ingresos_anuales COMA pyme COMA link COMA departamentos
    (20) objeto_empresa -> . nombre_empresa COMA fundacion COMA direccion COMA ingresos_anuales COMA pyme COMA departamentos
    (21) objeto_empresa -> . nombre_empresa COMA fundacion COMA ingresos_anuales COMA pyme COMA departamentos
    (22) nombre_empresa -> . NOMBRE_EMPRESA TEXTO

    NOMBRE_EMPRESA  shift and go to state 38

    objeto_empresa                 shift and go to state 36
    nombre_empresa                 shift and go to state 37

state 26

    (1) sigma -> APERT_LISTA empresas COMA version COMA . firmaDigital CIERRE_LISTA
    (13) firmaDigital -> . FIRMA_DIGITAL TEXTO
    (14) firmaDigital -> . FIRMA_DIGITAL VACIO

    FIRMA_DIGITAL   shift and go to state 8

    firmaDigital                   shift and go to state 39

state 27

    (6) sigma -> APERT_LISTA empresas COMA version CIERRE_LISTA .

    $end            reduce using rule 6 (sigma -> APERT_LISTA empresas COMA version CIERRE_LISTA .)


state 28

    (2) sigma -> APERT_LISTA empresas COMA firmaDigital COMA . version CIERRE_LISTA
    (11) version -> . VERSION TEXTO
    (12) version -> . VERSION VACIO

    VERSION         shift and go to state 7

    version                        shift and go to state 40

state 29

    (7) sigma -> APERT_LISTA empresas COMA firmaDigital CIERRE_LISTA .

    $end            reduce using rule 7 (sigma -> APERT_LISTA empresas COMA firmaDigital CIERRE_LISTA .)


state 30

